--- a/poly.cabal
+++ b/poly.cabal
@@ -21,4 +21,7 @@ executable poly
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , monomer
+    , process
+    , text
   default-language: Haskell2010
