AAAAA the haskell vanilla type system may not be the very best

--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 #
 extra-deps:
 - monomer-1.6.0.1
+- containers-0.7
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
