--- a/poly.cabal
+++ b/poly.cabal
@@ -20,7 +20,9 @@ executable poly
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      Hustle
+    , base >=4.7 && <5
+    , containers
     , monomer
     , process
     , text
